operators/workflows/sample-webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  namespace: sample-webhook
  labels:
    name: webhook-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: webhook-test.k8s.nabi.kim
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: webhook-eventsource-svc
                port:
                  number: 12000
  tls:
    - hosts:
        - webhook-test.k8s.nabi.kim
      secretName: webhook-tls
